[gd_scene load_steps=4 format=3 uid="uid://squadsselection001"]

[ext_resource type="Script" path="res://src/scenes/SquadSelectionScene.gd" id="1_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.08, 0.12, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_left_top = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_left_bottom = 8

[node name="SquadSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scene")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "SELECT YOUR SQUADS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Choose up to 4 teams for this mission"
horizontal_alignment = 1

[node name="SelectedPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="VBox/SelectedPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="VBox/SelectedPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBox/SelectedPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Selected Teams:"

[node name="SelectedTeams" type="HBoxContainer" parent="VBox/SelectedPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="AvailablePanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="VBox/AvailablePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="VBox/AvailablePanel/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/AvailablePanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Available Teams:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/AvailablePanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AvailableTeams" type="GridContainer" parent="VBox/AvailablePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="BottomBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="BackBtn" type="Button" parent="VBox/BottomBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="CountLabel" type="Label" parent="VBox/BottomBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0 / 4 Selected"
vertical_alignment = 1

[node name="DeployBtn" type="Button" parent="VBox/BottomBar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 20
text = "DEPLOY"

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -35.0
offset_right = 250.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "[Click] Select/Deselect | [1-4] Remove from slot"
horizontal_alignment = 1
